--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,3 +6,18 @@
 .carousel img{height: 1000px ; object-fit: cover;}
 
 .propio img{ width:150px;}
+
+.card img{ height: 200px; object-fit: cover;}
+
+.card-text{
+    
+    display: -webkit-box;
+    -webkit-line-clamp: 5; /* Number of lines */
+    -webkit-box-orient: vertical;
+    overflow: auto;
+    text-overflow: ellipsis;
+   
+}
+
+
+
