--- a/css/inicio.css
+++ b/css/inicio.css
@@ -6,3 +6,7 @@
 .carousel img{height: 1000px ; object-fit: cover;}
 
 .propio img{ width:150px;}
+
+   .bg-propio{
+      background-color: #0b8123
+    }
