--- a/css/sobre-nosotros.css
+++ b/css/sobre-nosotros.css
@@ -3,6 +3,12 @@
 
 .navbar-brand img{ width: 120px;}
 
-.carousel img{height: 1000px ; object-fit: cover;}
+.carousel img{height: 500px; object-fit: cover;}
 
 .propio img{ width:150px;}
+
+.card img{ height: 200px; object-fit: cover;}
+
+   .bg-propio{
+      background-color: #0b8123
+    }
